# tb303-juce

./: .gitignore  CMakeLists.txt  ERROR_LOG.md  SEQUENCER_PLAN.md
.github/workflows/: build-vst3.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  patterns_data.h
dsp_test/: blep_test.cpp  dawsync_test.cpp  dsp_test.cpp  freq_resp.cpp  phase3_fix_test.cpp  phase3_test.cpp  preset_test.cpp  reso_test.cpp  selfosc_test.cpp  seq_fix_test.cpp  seq_p2_test.cpp  seq_test.cpp  voice_test.cpp
scripts/: build_msvc_steps.cmd
